css/common.css
html, body {
  width: 100%;
  height: 100%;
  font-family: Helvetica, Arial, sans-serif;
  padding: 0;
  margin: 0;
}
html * {
  -webkit-user-select: none;
  user-select: none;
  cursor: default;
}

h1 {
  position:absolute;
  z-index: 100;
  margin-left: 100px;
  display:none;
  color: #fff;
  text-shadow: 0 0 10px rgba(0,0,0, .9);
  font-size: 16px;
}
#map_canvas {
  width:75%;
  height:100%;
  position: relative;
}
#map_switches {
  position: absolute;
  /*
  Need to make sure they're on top of the map,
  which has z-indexes of hundred(s) thousand(s). :)
  */
  z-index: 10000000000;
  top: 0;
  right: 0;
  background: #fff;
  box-shadow: -1px 1px 5px rgba(0,0,0, .5);
}
#map_switches a {
  padding: 10px 10px 10px 30px;
  display: block;
  color: #008000;
  text-decoration: none;
  background: url(../images/switch-on.png) 10px 50% no-repeat;
  border: 1px solid #ccc;
  border-top-width: 0;
  border-right-width: 0;
}
#map_switches a.off {
  color: #ccc;
  background-image: url(../images/switch-off.png);
}

#sidebar {
  width: 25%;
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  background: white;
  box-shadow: -1px -1px 10px rgba(0,0,0, .5);
}
#timefield {
  display: block;
  padding: 5px 10px;
  background: #efe;
  box-shadow: 1px 1px 5px rgba(0,0,0, .4);
  margin-bottom: 20px;
  line-height: 30px;
  font-weight: bold;
}
#timefield label {
}
#timefield input {
  display: inline-block;
  vertical-align: bottom;
  height: 30px;
  line-height: 30px;
  width: 65%;
  font-size: 25px;
  text-align: center;
  border: 0px solid rgba(0,0,0, .2);
  background: rgba(255,255,255, .9);
  font-weight: normal;
  box-shadow: inset 1px 1px 8px rgba(0,0,0, .4);
  margin: 0;
}
#timefield a#now {
  display: inline-block;
  vertical-align: bottom;
  height: 30px;
  line-height: 30px;
  padding: 0 10px 0 30px;
  margin: 0;
  text-decoration: none;
  color: #ccc;
  background: #ffffff url(../images/switch-off.png) 10px 50% no-repeat;
  border: 1px solid #ccc;
  border-top-width: 0;
  border-right-width: 0;
  margin: 0;
}
#timefield a#now.selected {
  color: #008000;
  background-image: url(../images/switch-on.png);
  background-color: transparent;
  border-color: transparent;
}

.result {
  padding: 10px;
  margin: 5px;
  border-top-left-radius: 3px;
  border-bottom-right-radius: 3px;
  box-shadow: 1px 1px 5px rgba(0,0,0, .2);
  -webkit-transition: all .3s ease-in-out;
  -moz-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
  position: relative;
}
.result:hover{
  background-color: #efe;
  box-shadow: 1px 1px 5px rgba(0,0,0, .5);
}
.result.selected {
  background-color: #cfc;
  box-shadow: 1px 1px 5px rgba(0,0,0, .5);
}
.result h3 {
  margin: 0;
  font-size: 22px;
  width: 30px;
  height: 30px;
  line-height: 30px;
  text-align: center;
  font-weight: bold;
  position: absolute;
  top: 0;
  left: 0;
  color: #fff;
  background: #363;
  border-top-left-radius: 3px;
  border-bottom-right-radius: 3px;
}
.result h4 {
  padding-left: 30px;
  margin: -2px 0 10px;
  font-size: 18px;
  font-weight: normal;
}

.result ol {
  margin: 10px 0;
  padding: 0;
  list-style: none;
}
.result li {
  margin-bottom: 4px;
  color: #333;
}

.result .time {
  width: 50px;
  display: block;
  float: left;
}
.result .type {
  color: #000;
  font-weight: bold;
}
.result .meters {

}

.result .places {
  padding-left: 50px;
  display: block;
}

/* Loader animation */
#loader{
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -34.5px;
	display: none;
}
.circle{
	background-color:#CCC;
	float:left;
	height:15px;
	margin-left:8px;
	width:15px;
	-webkit-animation-name: bounce_circle;
	-webkit-border-radius:10px;
 	-webkit-animation-duration: 1.5s;
 	-webkit-animation-iteration-count: infinite;
 	-webkit-animation-direction: linear;
	opacity:0.3;
}
#circle_1{
 	-webkit-animation-delay: .3s;
 }
#circle_2{
 	-webkit-animation-delay: .7s;
}
#circle_3{
 	-webkit-animation-delay: .9s;
}
@-webkit-keyframes bounce_circle{
	0%{opacity:0.3;}
	50%{opacity:1;background-color:#111}
	100%{opacity:0.3;}
}

